tests/compiletests/ui/spirv-attr/int-without-flat.rs
// build-fail
// normalize-stderr-test "\.rs:\d+:\d+" -> ".rs:"
// normalize-stderr-test "(\n)\d* *([ -])([\|\+\-\=])" -> "$1   $2$3"

use spirv_std::spirv;

#[spirv(fragment)]
pub fn fragment(int: u32, double: f64) {}
